--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a href="#" class="header-registration-link header-login">Login</a>
           </li>
           <li class="header-registration-item">
-            <a href="#" class="header-registration-link header-signup">Sign up</a>
+            <a href="#" class="button-primary header-registration-link header-signup">Sign up</a>
           </li>
         </ul>
     </div>
@@ -38,16 +38,69 @@
 
     </div>
   </header>
-  <div class="hero">
-    <div class="container">
-      <div class="hero-description">
-        <h2 class="hero-heading">More than just shorter links</h2>
-        <p class="hero-info">Build your brand’s recognition and get detailed insights on how your links are performing.
-        </p>
-        <a class="hero-link" href="#">Get started</a>
+  <main class="site-content">
+    <section class="hero">
+      <div class="container">
+        <div class="hero-description">
+          <h1 class="hero-heading">More than just shorter links</h1>
+          <p class="hero-info">Build your brand’s recognition and get detailed insights on how your links are performing.
+          </p>
+          <a class="button-primary hero-link" href="#">Get started</a>
+        </div>
       </div>
+
+    </section>
+
+    <div class="container">
+      <section class="shorten">
+        <form action="https://echohtmlacademy.ru" class="form">
+          <input class="shorten-link-input" type="text" placeholder="Shorten a link here...">
+          <button class="button-primary shorten-it-button">Shorten it</button>
+        </form>
+      </section>
     </div>
 
-  </div>
+    <section class="statistics">
+    <div class="container">
+        <div class="statistics-container">
+        <div class="statistics-description">
+          <h2 class="statistics-heading">Advanced Statistics</h2>
+          <p class="statistics-info">Track how your links are performing across the web with our advanced statistics dashboard.</p>
+        </div>
+
+        <ul class="statistics-list">
+          <li class="statistics-item item-recognition">
+            <div class="statistics-item-content brand-recognition">
+              <h3 class="statistics-item-content-heading">Brand Recognition</h3>
+              <p class="statistics-item-content-text">Boost your brand recognition with each click. Generic links don’t
+                mean a thing. Branded links help instil confidence in your content.</p>
+            </div>
+          </li>
+          <li class="statistics-item item-records">
+            <div class="statistics-item-content detailed-records">
+              <h3 class="statistics-item-content-heading">Detailed Records</h3>
+              <p class="statistics-item-content-text">Gain insights into who is clicking your links. Knowing when and
+                where people engage with your content helps inform better decisions.</p>
+            </div>
+          </li>
+          <li class="statistics-item item-customize">
+            <div class="statistics-item-content fully-customize">
+              <h3 class="statistics-item-content-heading">Fully Customizable</h3>
+              <p class="statistics-item-content-text">Improve brand awareness and content discoverability through
+                customizable links, supercharging audience engagement.</p>
+            </div>
+          </li>
+        </ul>
+      </div>
+      </div>
+      </section>
+
+    <section class="boost">
+      <div class="boost-container container">
+        <h2 class="boost-heading">Boost your links today</h2>
+        <a class="button-primary boost-link" href="#">Get Started</a>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
