--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+  <!-- btn-primary classim bor hover ishladi lekin transitionlar ishlamadi  -->
   <header class="site-header">
     <div class="site-header-container container">
       <div class="header-top">
@@ -102,5 +104,62 @@
       </div>
     </section>
   </main>
+
+  <footer class="site-footer">
+    <div class="site-footer-container container">
+      <a class="logo-white" href="index.html">
+        <img class="logo-white-img" src="img/logo-white.svg" alt="shortly logo" width="120" height="33">
+      </a>
+      <div class="footer-nav">
+        <ul class="footer-nav-list">
+          <h3 class="footer-heading">Features</h3>
+          <li class="footer-nav-item"><a class="footer-nav-link" href="#">Link Shortening</a></li>
+          <li class="footer-nav-item"><a class="footer-nav-link" href="#">Branded Links</a></li>
+          <li class="footer-nav-item"><a class="footer-nav-link" href="#">Analytics</a></li>
+        </ul>
+
+        <ul class="footer-nav-list">
+          <h3 class="footer-heading">Resources</h3>
+          <li class="footer-nav-item"><a class="footer-nav-link" href="#">Blog</a></li>
+          <li class="footer-nav-item"><a class="footer-nav-link" href="#">Developers</a></li>
+          <li class="footer-nav-item"><a class="footer-nav-link" href="#">Support</a></li>
+        </ul>
+
+        <ul class="footer-nav-list">
+          <h3 class="footer-heading">Resources</h3>
+          <li class="footer-nav-item"><a class="footer-nav-link" href="#">About</a></li>
+          <li class="footer-nav-item"><a class="footer-nav-link" href="#">Our Team</a></li>
+          <li class="footer-nav-item"><a class="footer-nav-link" href="#">Careers</a></li>
+          <li class="footer-nav-item"><a class="footer-nav-link" href="#">Contact</a></li>
+        </ul>
+
+        <ul class="footer-social-network">
+          <li class="footer-social-item">
+            <a href="#" class="footer-social-link">
+              <img src="img/icon/icon-facebook.svg"alt="icon" width="24" height="24">
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a href="#" class="footer-social-link">
+              <img src="img/icon/icon-twitter.svg" alt="icon" width="24" height="20">
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a href="#" class="footer-social-link">
+              <img src="img/icon/icon-pinterest.svg" alt="icon" width="24" height="24">
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a href="#" class="footer-social-link">
+              <img src="img/icon/icon-instagram.svg" alt="icon" width="24" height="24">
+            </a>
+          </li>
+        </ul>
+
+      </div>
+    </div>
+  </footer>
+
+
 </body>
 </html>
